@@ -200,15 +200,6 @@ Complete list of settings that you can put into ``testenv*`` sections:
     `--download-cache` command-line option.
     **default**: no download cache will be used.
 
-.. confval:: distribute=True|False
-
-    **DEPRECATED** -- as of August 2013 you should use setuptools
-    which has merged most of distribute_ 's changes.  Just use
-    the default, Luke!  In future versions of tox this option might
-    be ignored and setuptools always chosen.
-
-    **default:** False.
-
 .. confval:: sitepackages=True|False
 
     Set to ``True`` if you want to create virtual environments that also
